--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,10 @@
 
     <string name="app_name">iApologize</string>
     <string name="phone_number">Phone Number</string>
-    <string name="how_many_times">How Many Times</string>
+    <string name="how_many_times">How Many Texts</string>
     <string name="message">Message</string>
+    <string name="im_sorry">I\'m sorry. I didn\'t mean to screw up like I did. Last night was entirely my fault, no one should get that silly while playing Monopoly. I know I might mess up some times, so I got this really great app to help me out. At least every time I mess up, iApologize.</string>
+    <string name="explanation">This app sends multiple messages to a phone number. Enjoy!</string>
+
 
 </resources>
